tests/01.invalid_token.output.txt
Error in 01.invalid_token.grammar.txt, line 1:
this grammar contains "an unclosed string literal
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
                      Invalid token
